<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

  <LinearLayout
      android:id="@+id/actions_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <EditText
        android:id="@+id/frc_parameter_key"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="parameter key"
        android:inputType="textAutoComplete"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/get_string_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Get String"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/frc_parameter_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
      <EditText
          android:id="@+id/frc_minimum_fetch_interval"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:hint="fetch interval in seconds"
          android:inputType="number"
          android:textAlignment="center"
          android:textSize="12sp"/>

      <Button
          android:id="@+id/fetch_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:text="Fetch"
          android:textSize="12sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/darker_gray"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

      <Button
          android:id="@+id/reset_frc_button"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="Reset All"
          android:textSize="12sp" />

      <Space
          android:layout_width="50dp"
          android:layout_height="match_parent"/>


      <ToggleButton
          android:id="@+id/dev_mode_toggle_button"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:checked="false"
          android:textOff="Dev OFF"
          android:textOn="Dev ON"
          android:textSize="12sp" />

      <Button
          android:id="@+id/activate_fetched_button"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="Activate Fetched"
          android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:id="@+id/iid_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:textIsSelectable="true"
          android:layout_alignParentLeft="true" />

      <TextView
          android:id="@+id/sdk_version_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:textIsSelectable="true"
          android:layout_alignParentRight="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/api_call_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
  </LinearLayout>

  <TextView
      android:id="@+id/api_call_results"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/actions_layout"
      android:layout_centerHorizontal="true"
      android:gravity="center"
      android:textAlignment="center"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:textIsSelectable="true"/>
</RelativeLayout>
