...
        <Button
            android:id="@+id/get_conditional_user_properties_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="true"
            android:text="Get"/>

        <Button
            android:id="@+id/clear_conditional_user_properties_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
...
