<?xml version="1.0" encoding="utf-8"?>
<com.google.firebase.inappmessaging.display.internal.layout.FiamFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/banner_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="@dimen/bannerWeightSum">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/banner_content_root"
            style="@style/FiamUI.Banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="@dimen/bannerContentWeight"
            android:background="@drawable/rounded_layout"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.firebase.inappmessaging.display.internal.ResizableImageView
                android:id="@+id/banner_image"
                style="@style/FiamUI.ResizableImageView"
                android:adjustViewBounds="true"
                android:minHeight="64dp"
                android:minWidth="64dp"
                android:src="@drawable/image_placeholder"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:background="#ffbaba"
                tools:src="null"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/banner_title"
                style="@style/FiamUI.Text.BannerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/banner_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Banner Title" />

            <TextView
                android:id="@+id/banner_body"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/banner_title"
                app:layout_constraintTop_toBottomOf="@+id/banner_title"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/placeholder_lorem_ipsum_short" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</com.google.firebase.inappmessaging.display.internal.layout.FiamFrameLayout>